--- a/templates/index.html
+++ b/templates/index.html
@@ -6,6 +6,37 @@
     <title>Home</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
     <script src="{{ url_for('static', filename='main.js') }}" defer></script>
+    <style>
+        /* .navbar__logo {
+            font-size:30px;
+            text-align:center;
+            padding:10px;
+        }
+        a {
+            text-decoration: none;
+            color:darkgreen;
+        }
+        ul {
+    list-style-type:none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: beige;
+}
+
+li {
+    float: left;
+    color: black;
+}
+
+li a {
+    display: block;
+    color: black;
+    text-align: center;
+    padding: 20px 20px;
+} */
+
+    </style>
 </head>
 <body>
     <nav class="navbar">
