--- a/templates/reg_items.html
+++ b/templates/reg_items.html
@@ -64,7 +64,7 @@
             <br><br>
         </div>
         
-        <input type="submit" value="Submit!">
+        <input type="submit" value="Submit!" onClick="alertDialog()">
         <br><br>
     </div>
 </form>
